fixed footer, added links(footer), added button(footer), fixed subscription form size, fixed events pictures size, horizontal scroll will be fixed when i add gallery slider

--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -5,6 +5,7 @@
   background-image: url(../images/arrow.png);
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 
   @include onTablet {
     height: 70px;
