--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -51,7 +51,15 @@
   }
 
   &__image {
-    width: 100%;
+    width: 280px;
+
+    @include onTablet {
+      width: 700px;
+    }
+
+    @include onDesktop {
+      width: 670px;
+    }
   }
 
   &__title {
