--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,5 +1,6 @@
 .events {
   text-align: center;
+  padding-top: 50px;
 
   &__title {
     font-family: "Montserrat", sans-serif;
