--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -21,6 +21,8 @@
     outline: none;
     border: transparent;
     padding-left: 32px;
+    width: 100%;
+    height: 70px;
 
     &::placeholder {
       font-family: "Montserrat", sans-serif;
