--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -14,7 +14,7 @@
   }
 
   @include onTablet {
-    height: 55vh;
+    height: 50vh;
     background-image: url(../images/header-tablet.png);
     background-position: top right;
     background-size: 55%;
@@ -24,7 +24,6 @@
     background-image: url(../images/header.png);
     background-position: top right;
     background-size: 60%;
-    padding-bottom: 200px;
   }
 
   &__title {
