--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -55,6 +55,7 @@
   }
 
   &__description {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(2, 130px);
     padding-bottom: 70px;
@@ -149,9 +150,10 @@
     }
 
     @include onDesktop {
-      grid-column: 1 / 12;
+      grid-column: 1 / 13;
       display: flex;
       justify-content: space-between;
+      margin: 80px 55px 0;
     }
   }
 
@@ -168,4 +170,17 @@
 
 .bold {
   font-weight: 700;
+}
+
+.arrow {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+
+  @include onDesktop {
+    display: none;
+  }
+  @include onTablet {
+    display: none;
+  }
 }
